# AI-Engineer-Internship-Task

./: .gitignore  README.md  main.py  pyproject.toml  run_e2e_test.py
backend/: .dockerignore  AGENTS.md  Dockerfile  main.py
backend/src/config/personalities/: witty_friend.yaml
backend/src/config/prompts/: emotional.yaml  extractor.yaml  factual.yaml  pipeline_prompts.yaml
backend/src/core/: config.py  logging.py
backend/src/memory/extractors/: __init__.py  analysis_agent.py  base_classes.py  orchestractor.py
backend/src/models/: __init__.py
backend/src/models/memory/: __init__.py  operations.py
backend/src/personality/: __init__.py  config_loader.py  models.py
backend/src/pipeline/: __init__.py  context.py  prompt_loader.py  transformer.py
frontend/: .env.production  package-lock.json
frontend/src/: store.ts
frontend/src/api/: os.ts
frontend/src/components/chat/ChatArea/Messages/: ChatBlankState.tsx
frontend/src/components/chat/Sidebar/: Sidebar.tsx
frontend/src/hooks/: useAIStreamHandler.tsx  useChatActions.ts  useSessionLoader.tsx
src/config/: app_config.yaml
src/config/personalities/: calm_mentor.yaml  therapist.yaml
src/config/prompts/: convoanalysis.yaml
src/core/: config.py  logging.py
src/memory/extractors/: base_classes.py  emotional_agent.py  factual_agent.py  preference_agent.py
src/models/: enums.py
src/models/memory/: core.py  extraction.py  search.py
src/personality/: engine.py  models.py
src/pipeline/: stages.py
src/utils/: config_loader.py
tests/: run_e2e_test.py
(+2 files in other folders)
