[project]
name = "ai-engineer-internship-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.4",
    "fastapi[standard]>=0.123.4",
    "google-genai>=1.52.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "ruff>=0.14.7",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "structlog>=24.4.0",
]
